Added selector info

--- a/index.html
+++ b/index.html
@@ -15,24 +15,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Selector 1</td>
-                    <td>Name</td>
-                    <td>Description</td>
+                    <td>*</td>
+                    <td>Universal Selector</td>
+                    <td>Matches all elements of the document</td>
                 </tr>
                 <tr>
-                    <td>Selector 2</td>
-                    <td>Name</td>
-                    <td>Description</td>
+                    <td>elementname</td>
+                    <td>Type Selector</td>
+                    <td>Matches all elements with the element name.</td>
                 </tr>
                 <tr>
-                    <td>Selector 3</td>
-                    <td>Name</td>
-                    <td>Description</td>
+                    <td>.classname</td>
+                    <td>Class Selector</td>
+                    <td>Matches all classes with the class name.</td>
                 </tr>
                 <tr>
-                    <td>Selector 4</td>
-                    <td>Name</td>
-                    <td>Description</td>
+                    <td>#idname</td>
+                    <td>ID Selector</td>
+                    <td>Matches all elements with the ID name.</td>
+                </tr>
+                <tr>
+                    <td>[attr]</td>
+                    <td>Attribute Selector</td>
+                    <td>Matches all elements with the attribute.</td>
                 </tr>
             </tbody>
         </table>
